--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -531,7 +531,7 @@ h5{
    .project-1{
     margin-top: 5%;
    }
-   .Figma{
+   .Behance{
     margin-left: 43.5%;
     margin-top: -2%;
     font-size: 30px;
